# pytest-depends-on

./: .gitignore  README.md  README.tmp.md  pyproject.toml  pyproject_tmp.toml
.config/: ruff.toml
.cursor/instructions/: agent-cli-prompt-2025-08-07.md  agent-prompt-2025-09-03.md  agent-prompt-v1.0.md  agent-prompt-v1.2.md  agent-prompt.md  agent-tools-v1.0.md  chat-prompt.md  memory-prompt.md  memory-rating-prompt.md
.github/workflows/: lint.yml  pytest_by_marker.yml  tests.yml
pytest_depends_on/: depends_on.py
scripts/: run_pytest_marker.py
tests/: conftest.py  pytest.ini  test_class.py  test_multi_parent.py  test_parent_failed.py  test_parent_parametrize.py  test_parent_passed.py  test_parent_skip.py  test_with_default_param.py
